[gd_scene load_steps=6 format=2]

[ext_resource path="res://main_menu/main_menu_ui.tscn" type="PackedScene" id=1]
[ext_resource path="res://main_menu/main_menu_cube_animator.gd" type="Script" id=2]
[ext_resource path="res://main_menu/single_player_menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://cube/cube_controller.tscn" type="PackedScene" id=4]

[sub_resource type="ButtonGroup" id=1]
resource_name = "mode"

[node name="main_menu" type="Spatial"]
script = ExtResource( 2 )

[node name="cube" parent="." instance=ExtResource( 4 )]

[node name="autorotate_timer" type="Timer" parent="."]

[node name="3x3_camera" type="Position3D" parent="."]
transform = Transform( 0.489747, 0.45204, -0.745525, 0, 0.855093, 0.518475, 0.871864, -0.253922, 0.41878, -13.653, 6.51, 1.384 )

[node name="4x4_camera" type="Position3D" parent="."]
transform = Transform( 0.425052, 0.476178, -0.769795, 0, 0.850444, 0.526066, 0.905168, -0.223606, 0.361484, -17.643, 7.7, 1.444 )

[node name="5x5_camera" type="Position3D" parent="."]
transform = Transform( 0.460726, 0.369889, -0.806792, 0, 0.909018, 0.416757, 0.887541, -0.192011, 0.418809, -21.763, 7.28, 3.494 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.425052, 0.476178, -0.769795, 0, 0.850444, 0.526066, 0.905168, -0.223606, 0.361484, -17.643, 7.7, 1.444 )

[node name="Tween" type="Tween" parent="Camera"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="main_menu_screens" type="Control" parent="CanvasLayer"]
__meta__ = {
"_edit_use_anchors_": true
}

[node name="main_menu" parent="CanvasLayer/main_menu_screens" instance=ExtResource( 1 )]

[node name="single_player_menu" parent="CanvasLayer/main_menu_screens" instance=ExtResource( 3 )]
visible = false

[node name="none" parent="CanvasLayer/main_menu_screens/single_player_menu/modes_panel/MarginContainer/VBoxContainer/grid" index="0"]
group = SubResource( 1 )

[node name="preset_hand" parent="CanvasLayer/main_menu_screens/single_player_menu/modes_panel/MarginContainer/VBoxContainer/grid" index="1"]
group = SubResource( 1 )

[node name="random_bonus" parent="CanvasLayer/main_menu_screens/single_player_menu/modes_panel/MarginContainer/VBoxContainer/grid" index="2"]
group = SubResource( 1 )
[connection signal="timeout" from="autorotate_timer" to="." method="_on_autorotate_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/main_menu_screens/main_menu/VBoxContainer/single_player" to="." method="_on_single_player_pressed"]
[connection signal="pressed" from="CanvasLayer/main_menu_screens/main_menu/VBoxContainer/multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="CanvasLayer/main_menu_screens/main_menu/VBoxContainer/quit" to="." method="_on_quit_pressed"]

[editable path="CanvasLayer/main_menu_screens/main_menu"]

[editable path="CanvasLayer/main_menu_screens/single_player_menu"]
